commit translated contents

--- a/powerbi-docs/consumer/TOC.yml
+++ b/powerbi-docs/consumer/TOC.yml
@@ -68,6 +68,8 @@
               href: end-user-pdf.md
             - name: Exportar um relatório para o PowerPoint
               href: end-user-powerpoint.md
+            - name: Como identificar e usar botões
+              href: end-user-buttons.md
             - name: Adicionar um indicador a um relatório
               href: end-user-bookmarks.md
             - name: Adicionar um destaque a um relatório
