commit translated contents

--- a/powerbi-docs/admin/TOC.yml
+++ b/powerbi-docs/admin/TOC.yml
@@ -76,13 +76,15 @@
           href: desktop-admin-sign-in-form.md
         - name: Proteção de dados
           items:
-            - name: Visão geral da proteção de dados
-              href: service-security-data-protection-overview.md
-            - name: Habilitar rotulagem de confidencialidade de dados
+            - name: Rótulos de confidencialidade no Power BI
+              href: service-security-sensitivity-label-overview.md
+            - name: Habilitar a rotulagem de confidencialidade
               href: service-security-enable-data-sensitivity-labels.md
+            - name: Como aplicar rótulos de confidencialidade
+              href: service-security-apply-data-sensitivity-labels.md
             - name: Usar o Microsoft Cloud App Security com o Power BI
               href: service-security-using-microsoft-cloud-app-security-controls.md
-            - name: Relatório de métricas de proteção de dados
+            - name: Relatório de métricas de proteção
               href: service-security-data-protection-metrics-report.md
         - name: Segurança em nível de linha
           href: service-admin-rls.md
